--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,10 @@
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    font-family: 'Manrope', sans-serif;
+    /* font-family: 'Inter', sans-serif;
+    font-family: 'Manrope', sans-serif; */
     font-family: 'Poppins', sans-serif;
+    background-color: #fff;
 }
 
 img {
@@ -20,4 +21,263 @@ img {
 
 ul {
     list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+/* Colors, Font size and Font weight. */
+:root {
+    --first_common_color: #3A3A3A;
+    --font_weight_400: 400;
+    --font_weight_500: 500;
+    --font_weight_600: 600;
+    --font_weight_700: 700;
+    --font_size_1em: 1em;
+    --font_size_0875em: 0.875em;
+}
+
+
+/* Common button. */
+.common_button {
+    border: none;
+    background-color: #E02C6D;
+    color: #fff;
+    padding: 0.625em 1.5em;
+    font-size: var(--font_size_1em);
+    font-weight: var(--font_weight_700);
+}
+
+.common_button_span {
+    display: inline-block;
+    margin-left: .5em;
+}
+
+
+
+/* 
+                                            Header.
+=========================================================================================
+*/
+header span {
+    display: none;
+}
+
+header {
+    width: 90%;
+    margin: 2em auto 2.5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h3 {
+    color: var(--first_common_color);
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+header nav ul {
+    display: flex;
+    gap: 2em;
+}
+
+header nav ul li a {
+    color: var(--first_common_color);
+    font-size: var(--font_size_1em);
+    font-weight: 600;
+}
+
+
+
+
+/* 
+                                        Main.
+=========================================================================================
+*/
+
+
+/* 
+                                Your journey section.
+=============================================================================
+*/
+#your_journey {
+    padding: 3em 0;
+    width: 90%;
+    margin: 0 auto;
+}
+
+#your_journey>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Your journey left. */
+.your_journey_left {
+    width: 50%;
+}
+
+.your_journey_left h3 {
+    color: var(--first_common_color);
+    font-size: 3.25em;
+    font-weight: var(--font_weight_700);
+}
+
+.your_journey_left p {
+    font-weight: var(--font_weight_600);
+    color: var(--first_common_color);
+    font-size: var(--font_size_1em);
+    margin: 1em 0;
+}
+
+.your_journey_left button {
+    border-radius: 2.5625em;
+}
+
+
+
+/* Your journey right. */
+.your_journey_right {
+    width: 40%;
+    background-image: url("../images/Circle\ design.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+                                    Responsive CSS.
+=========================================================================================
+*/
+@media screen and (max-width: 576px) {
+
+    /*
+                                            Header.
+    =====================================================================================
+    */
+
+    header nav {
+        display: none;
+    }
+
+    header span {
+        display: block;
+    }
+
+    header h3 {
+        font-size: 1em;
+    }
+
+
+
+     /*
+                                            Main.
+    =====================================================================================
+    */
+
+    /*
+                                    Your journey section.
+    =========================================================================
+    */
+
+    #your_journey {
+        padding: 0 0 1em;
+    }
+
+    #your_journey>div {
+        flex-direction: column-reverse;
+    }
+
+    #your_journey>div div {
+        width: 100%;
+    }
+
+    /* Your journey left. */
+    .your_journey_left {
+        text-align: center;
+    }
+
+    .your_journey_left h3 {
+        font-size: 1.5em;
+    }
+
+    .your_journey_left p {
+        font-size: var(--font_size_0875em);
+    }
+
+
+
+    /* Your journey right. */
+    .your_journey_right {
+        margin-bottom: 2em;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 576px) and (max-width: 768px) {
+
+    /*
+                                        Header.
+    =====================================================================================
+    */
+
+    header {
+        flex-direction: column;
+        gap: .8em;
+    }
+
+    header h3 {
+        font-size: 2em;
+    }
+
+    header nav ul li a {
+        font-size: 1.2em;
+    }
+
+
+    /*
+                                            Main.
+    =====================================================================================
+    */
+
+    /*
+                                     section.
+    =========================================================================
+    */
 }
