--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 /* Google fonts. */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,14 +10,15 @@
 
 body {
     /* font-family: 'Inter', sans-serif;
-    font-family: 'Manrope', sans-serif; */
+    font-family: 'Manrope', sans-serif;
+    font-family: 'Roboto', sans-serif; */
     font-family: 'Poppins', sans-serif;
     background-color: #fff;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
     display: block;
 }
 
@@ -32,6 +35,7 @@ a {
 /* Colors, Font size and Font weight. */
 :root {
     --first_common_color: #3A3A3A;
+    --popular_figcation: #18191F;
     --font_weight_400: 400;
     --font_weight_500: 500;
     --font_weight_600: 600;
@@ -177,6 +181,83 @@ header nav ul li a {
 
 
 
+/* 
+                                Popular section.
+=============================================================================
+*/
+#popular_section {
+    width: 80%;
+    margin: 0 auto;
+}
+
+#popular_section h3 {
+    text-align: center;
+    color: var(--first_common_color);
+    font-size: 1.75em;
+}
+
+.popular_grid {
+    margin: 2em 0;
+    display: grid;
+    gap: 1.875em;
+    row-gap: 1.875em;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.popular_grid_item {
+    padding: 1em;
+    border-radius: .4em;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.popular_grid_item img {
+    width: 100%;
+    height: 16em;
+}
+
+.popular_grid_item figcaption {
+    font-size: 1.75em;
+    font-weight: var(--font_weight_500);
+    color: var(--popular_figcation);
+    font-weight: var(--font_weight_500);
+    margin-top: 1em;
+}
+
+.popular_grid_item .price {
+    font-size: 1.5em;
+    font-weight: var(--font_weight_400);
+    color: rgba(0, 0, 0, 0.87);
+    margin: .3750em 0;
+    font-family: 'Inter', sans-serif;
+}
+
+.popular_grid_item div.div_star {
+    display: flex;
+    align-items: center;
+    gap: .3em;
+    color: #5E6366;
+    font-family: 'Roboto', sans-serif;
+    font-size: var(--font_size_0875em);
+    font-weight: var(--font_weight_700);
+}
+
+.popular_grid_item div.div_star ul {
+    display: flex;
+}
+
+.popular_grid_item div.div_star ul li img {
+    width: auto;
+    height: auto;
+}
+
+.div_span span {
+    display: block;
+    font-weight: var(--font_weight_700);
+    font-size: var(--font_size_0875em);
+    font-family: 'Inter', sans-serif;
+    color: #787885;
+}
 
 
 
@@ -252,8 +333,6 @@ header nav ul li a {
         font-size: var(--font_size_0875em);
     }
 
-
-
     /* Your journey right. */
     .your_journey_right {
         margin-bottom: 2em;
@@ -273,6 +352,16 @@ header nav ul li a {
     #link_section ul {
         flex-wrap: wrap;
     }
+
+
+    /*
+                                    Popular section.
+    =========================================================================
+    */
+    .popular_grid {
+        grid-template-columns: 1fr;
+    }
+    
 
 }
 
@@ -318,6 +407,14 @@ header nav ul li a {
         flex-wrap: wrap;
         align-items: center;
     }
+
+    /*
+                                    Popular section.
+    =========================================================================
+    */
+    .popular_grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 
@@ -336,8 +433,11 @@ header nav ul li a {
     */
 
     /*
-                                     section.
+                                    Popular section.
     =========================================================================
     */
-    
+    .popular_grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 }
